<resources>
    <string name="app_name">TabLayout</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nombre">Nombre*</string>
    <string name="apellido">Apellido*</string>
    <string name="email">Email*</string>
    <string name="pass">Contraseña*</string>
    <string name="telefono">Telefono</string>

    <string-array name="listType">
        <item>Nombre o descripcion</item>
        <item>Facultad</item>
        <item>Categoria</item>
    </string-array>

    <string-array name="listSort">
        <item>Ascendente</item>
        <item>Descendente</item>
    </string-array>
</resources>
